@@ -1,3 +1,7 @@
+2001-06-29  James Cownie <jcownie@etnus.com>
+
+	* readelf.c: Support DWARF 2.1 attributes.
+
 2001-06-27  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* objcopy.c (strip_main): Accept -o command line switch.
